<resources>
    <string name="app_name">assignment03</string>
    <string name="start" />
    <string name="startButton">Start</string>
    <string name="welcome">Welcome !!!</string>
    <string name="demographicInfo">Demographic Information</string>
    <string name="education">"Education: "</string>
    <string name="maritalStatus">"Martial Status: "</string>
    <string name="livingStatus">"Living Status: "</string>
    <string name="income">"Income: "</string>
    <string name="none">N/A</string>
    <string name="selectButton">Select</string>
    <string name="nextButton">Next</string>
    <string name="selectEducationLevel">Select Education Level:</string>
    <string name="educationLevelDesc">Education Level Description</string>
    <string name="belowHighSchool">Below Highschool</string>
    <string name="highSchool">Highschool</string>
    <string name="bachelorsDegree">Bachelors Degree</string>
    <string name="mastersDegree">Master Degree</string>
    <string name="phdOrHigher">PHD or Higher</string>
    <string name="tradeSchool">Trade School</string>
    <string name="preferNotToSay">Prefer Not To Say</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="identificationInfo">ID Information</string>
    <string name="name">"Name: "</string>
    <string name="email">"Email: "</string>
    <string name="role">"Role: "</string>
    <string name="enterName">Enter Name</string>
    <string name="enterEmail">Enter Email</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="other">Other</string>
    <string name="selectMaritalStatus">Select Marital Status</string>
    <string name="maritalStatusDesc">Marital Status Descpription</string>
    <string name="notMarried">Not Married</string>
    <string name="married">Married</string>
    <string name="selectLivingStatus">Select Living Status</string>
    <string name="livingStatusDesc">Which of the following describes your living status?</string>
    <string name="homeowner">Homeowner</string>
    <string name="renter">Renter</string>
    <string name="lessee">Lessee</string>
    <string name="selectHouseholdIncome">Household Income</string>
    <string name="incomeDesc"><![CDATA[ <$25K ]]></string>
</resources>